# SDL_Template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conandata.yml  game.cpp  game.h  main.cpp
src/: Constants.h  Game.cpp  Game.h  constants.h  game.cpp  game.h  main.cpp
src/components/: KeyInputComponent.h  SpriteComponent.h  TransformComponent.h
src/systems/: MovementSystem.cpp  MovementSystem.h  SpriteSystem.cpp  SpriteSystem.h  TransformSystem.cpp  TransformSystem.h
